welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:43: error: not found: value monte
    } else {monte()}
            ^